Updated backend and frontend code