@@ -1,19 +1,20 @@
 package com.pradha.main.controller;
 
+import com.pradha.main.dto.LoginRequest;
+import com.pradha.main.dto.SignupRequest;
+import com.pradha.main.dto.AuthResponse;
 import com.pradha.main.entity.User;
 import com.pradha.main.repository.UserRepository;
-import com.pradha.main.security.JwtUtil;
-import com.pradha.main.service.EmailService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.*;
+import jakarta.validation.Valid;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/auth")
-@CrossOrigin(origins = "*")
+@CrossOrigin(origins = {"http://localhost:3000", "http://18.205.19.24:3000", "http://18.205.19.24", "http://18.205.19.24:8081"}, allowCredentials = "true")
 public class AuthController {
 
     @Autowired
@@ -22,85 +23,55 @@ public class AuthController {
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-    @Autowired
-    private JwtUtil jwtUtil;
-
-    @Autowired
-    private EmailService emailService;
-
-    // ✅ Register
-    @PostMapping("/register")
-    public ResponseEntity<?> register(@RequestBody User user) {
-        if (userRepository.findByEmail(user.getEmail()).isPresent()) {
-            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Email already exists!"));
+    @PostMapping("/signup")
+    public ResponseEntity<?> signup(@Valid @RequestBody SignupRequest request) {
+        if (userRepository.existsByEmail(request.getEmail())) {
+            return ResponseEntity.badRequest()
+                .body(Map.of("error", "Email already registered"));
         }
 
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
-        user.setRole("USER");
-        User newUser = userRepository.save(user);
+        User user = new User(
+            request.getEmail(),
+            request.getName(),
+            request.getPhone(),
+            passwordEncoder.encode(request.getPassword())
+        );
 
-        // ✅ Generate OTP
-        String otp = UUID.randomUUID().toString().substring(0, 6);
+        userRepository.save(user);
 
-        // store OTP temporarily (you will later store in DB or Redis)
-        newUser.setOtp(otp);
-        userRepository.save(newUser);
-
-        // ✅ Send OTP Email
-        emailService.sendOTP(newUser.getEmail(), otp);
-
-        return ResponseEntity.ok(Collections.singletonMap("message", "User registered. OTP sent to email"));
-    }
-
-    // ✅ Login
-    @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody Map<String, String> req) {
-        String email = req.get("email");
-        String password = req.get("password");
-
-        Optional<User> userOpt = userRepository.findByEmail(email);
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(401).body(Collections.singletonMap("message", "Invalid email or password"));
-        }
-
-        User user = userOpt.get();
-
-        if (!passwordEncoder.matches(password, user.getPassword())) {
-            return ResponseEntity.status(401).body(Collections.singletonMap("message", "Invalid email or password"));
-        }
-
-        String token = jwtUtil.generateToken(user.getEmail(), user.getRole());
-
-        return ResponseEntity.ok(Map.of(
-                "token", token,
-                "email", user.getEmail(),
-                "role", user.getRole(),
-                "message", "Login successful"
+        String token = "temp-token-" + System.currentTimeMillis();
+        return ResponseEntity.ok(new AuthResponse(
+            token,
+            "bearer",
+            Map.of("id", user.getId(), "email", user.getEmail(), "name", user.getName(), "role", user.getRole())
         ));
     }
 
-    // ✅ Verify OTP
-    @PostMapping("/verify-otp")
-    public ResponseEntity<?> verifyOTP(@RequestBody Map<String, String> req) {
-        String email = req.get("email");
-        String otp = req.get("otp");
+    @PostMapping("/login")
+    public ResponseEntity<?> login(@Valid @RequestBody LoginRequest request) {
+        User user = userRepository.findByEmail(request.getEmail())
+            .orElse(null);
 
-        Optional<User> userOpt = userRepository.findByEmail(email);
-
-        if (userOpt.isEmpty()) {
-            return ResponseEntity.status(400).body(Collections.singletonMap("message", "Invalid email"));
+        if (user == null || !passwordEncoder.matches(request.getPassword(), user.getPasswordHash())) {
+            return ResponseEntity.status(401)
+                .body(Map.of("error", "Invalid credentials"));
         }
 
-        User user = userOpt.get();
+        String token = "temp-token-" + System.currentTimeMillis();
+        return ResponseEntity.ok(new AuthResponse(
+            token,
+            "bearer",
+            Map.of("id", user.getId(), "email", user.getEmail(), "name", user.getName(), "role", user.getRole())
+        ));
+    }
 
-        if (user.getOtp() == null || !user.getOtp().equals(otp)) {
-            return ResponseEntity.status(400).body(Collections.singletonMap("message", "Invalid OTP"));
-        }
-
-        user.setOtp(null); // OTP used
-        userRepository.save(user);
-
-        return ResponseEntity.ok(Collections.singletonMap("message", "Email verified successfully"));
+    @GetMapping("/me")
+    public ResponseEntity<?> getCurrentUser() {
+        return ResponseEntity.ok(Map.of(
+            "id", "mock-user-id",
+            "email", "user@example.com",
+            "name", "Mock User",
+            "role", "USER"
+        ));
     }
 }
-
